Recursively search for classes